Gtk-3.20&3.22&3.24: [GtkFileChooser] Fix bold pane-separator
Especially in light-variant, since it seemed too much bold, let's
fork the border in Nautilus's pane-separator.

--- a/gtk/sass/3.20/_common.scss
+++ b/gtk/sass/3.20/_common.scss
@@ -4684,6 +4684,11 @@ filechooser {
   .dialog-action-box { border-top: 1px solid $borders_color; }
 
   #pathbarbox { border-bottom: 1px solid $bg_color; }
+
+  // override defaults to prevent to be bold
+  box > paned.horizontal > separator {
+    background-image: image($solid_light_borders_color);
+  }
 }
 
 filechooserbutton:drop(active) {
